.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Removed the groups, groupdata, membership and memberdata tools from this
  package. All code is now in a central place inside PlonePAS. The persistent
  tools have been from the PlonePAS package since Plone 2.5.
  [hannosch]

- Fixed and cleaned up the personalize_form.
  [hannosch]

- Moved NuPlone from the standard distribution into the status of a regular
  add-on. Maintaining two different themes hasn't proved itself.
  [hannosch]

- Vastly simplified our skins folder setup. We have only three folders for
  CMFPlone left: plone_images for images and icons, plone_resources for JS,
  CSS and KSS files and plone_browser for all templates and scripts.
  plone_3rdParty is an external that is pulled in separately and should really
  be moved out to its own package.
  [hannosch]

- Moved isExpired script into a method on the context view.
  [hannosch]

- Merged the getSectionFromURL and renderBase script into the ploneview and
  removed the displayContentsTab wrapper script.
  [hannosch]

- Merged the selectedTabs script into the `portal_tabs_view`.
  [hannosch]

- Replaced has_key method calls with containment checks via `in`.
  [hannosch]

- Replaced a direct interface invocation with a queryAdapter call, to avoid
  an internal getattr call and make the pattern clearer.
  [hannosch]

- Replaced here with context in all templates and scripts. The old spelling is
  still supported, but we need to settle on one to avoid confusion.
  [hannosch]

- Optimized the types tool action lookup further to avoid Acquisition lookups.
  [hannosch]

- Simplified the normalizeString method.
  [hannosch]

- Optimized the action lookup code and implemented category restriction for